--- a/app/src/main/res/layout/host_frag.xml
+++ b/app/src/main/res/layout/host_frag.xml
@@ -11,6 +11,18 @@
         android:background="@drawable/sunny"
         app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/txtName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/town"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="@dimen/txt_xxxlarge"
+            app:layout_constraintBottom_toTopOf="@+id/txtTemp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/txtTemp"
@@ -158,9 +170,10 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvForecast"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="@dimen/margin_large"
             android:layout_marginBottom="@dimen/margin_small"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/contentMarginRight"
             app:layout_constraintStart_toStartOf="@+id/contentMarginLeft"
             app:layout_constraintTop_toBottomOf="@+id/divider" />
