--- a/app/src/main/res/layout/host_frag.xml
+++ b/app/src/main/res/layout/host_frag.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,14 +9,13 @@
         android:id="@+id/cLHeader"
         android:layout_width="match_parent"
         android:layout_height="@dimen/header_height"
-        android:background="@drawable/sunny"
         app:layout_constraintTop_toTopOf="parent">
+
 
         <TextView
             android:id="@+id/txtName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/town"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="@color/white"
@@ -28,7 +28,6 @@
             android:id="@+id/txtTemp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/degree"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/txt_xxxxlarge"
@@ -41,7 +40,6 @@
             android:id="@+id/txtWeather"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/weather"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/txt_xxlarge"
@@ -56,7 +54,6 @@
         android:id="@+id/cLBody"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/sunny"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cLHeader">
 
@@ -87,7 +84,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/degree"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="@dimen/txt_xxlarge" />
@@ -115,7 +111,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/degree"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="@dimen/txt_xxlarge" />
@@ -144,7 +139,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/degree"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="@dimen/txt_xxlarge" />
