--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,5 +7,13 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="faba.app.goodwallweatherapp.view.fragments.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_weatherDetailsFrag"
+            app:destination="@id/weatherDetailsFrag" />
+    </fragment>
+    <fragment
+        android:id="@+id/weatherDetailsFrag"
+        android:name="faba.app.goodwallweatherapp.view.fragments.WeatherDetailsFrag"
+        android:label="WeatherDetailsFrag" />
 </navigation>
