Added time of day weather forecast

--- a/app/src/main/res/layout/host_frag.xml
+++ b/app/src/main/res/layout/host_frag.xml
@@ -35,7 +35,8 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="@dimen/txt_xxxxlarge"
+                android:layout_marginTop="@dimen/margin_xxxxx_large"
+                android:textSize="@dimen/txt_xxxxxlarge"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/txtWeather"
                 app:layout_constraintEnd_toEndOf="parent"
