--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,12 +8,17 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+
     <!--body_background-->
     <color name="sunny">#47AB2F</color>
     <color name="cloudy">#54717A</color>
     <color name="rainy">#57575D</color>
+    <color name="snowy">#CFE3E3</color>
 
     <color name="sunny_header">#f1b914</color>
+
+
+    <color name="light_grey">#e0e0e0</color>
 
 
 </resources>
