--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,10 @@
     <!--header_height-->
     <dimen name="header_height">380dp</dimen>
 
+    <!--header_height-->
+    <dimen name="rv_height">200dp</dimen>
+    <dimen name="rv_width">150dp</dimen>
+
 
     <!-- Margin -->
     <dimen name="margin_xxxxxxx_large">100dp</dimen>
@@ -31,7 +35,6 @@
 
 
     <dimen name="divider">1dp</dimen>
-
     <dimen name="icon_forecast">27dp</dimen>
 
 </resources>
